Add scheduler endpoint
