# versions/v1/routes.js
@@ -1,6 +1,7 @@
-import { health, project } from './src/routes';
+import { health, project, scheduler } from './src/routes';
 
 export default (version) => {
   version.use(health.routes(), health.allowedMethods());
   version.use(project.routes(), project.allowedMethods());
+  version.use(scheduler.routes(), scheduler.allowedMethods());
 };
