# versions/v1/src/routes/index.js
@@ -1,7 +1,9 @@
 import health from './health';
 import project from './project';
+import scheduler from './scheduler';
 
 export {
   health,
-  project
+  project,
+  scheduler
 };
