# versions/v1/src/routes/scheduler.js
@@ -1,0 +1,8 @@
+import KoaRouter from 'koa-router';
+import SchedulerController from '../controllers/scheduler';
+
+const schedulerRouter = new KoaRouter();
+
+schedulerRouter.post('/scheduler/sync', SchedulerController.syncAll);
+
+export default schedulerRouter;
